crates/ruau/tests/compile/runtime_require_private.rs
fn main() {
    let _ = std::mem::size_of::<ruau::runtime::require::SharedResolver>();
    let _ = std::mem::size_of::<ruau::runtime::require::RuntimeModuleCache>();
}
